# rMonitor

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  SUPPORT.md
packaging/deb/: build-debian-package.sh
packaging/rpm/: rmonitor.spec
packaging/wix/: main.wxs
src/: logger.rs  main.rs
src/ui/: cards.rs  mod.rs  overlays.rs  processes.rs  widgets.rs
